--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,187 @@
 /*This is the banner,navbar and logo */
-
-.navbar-container {
-    /*This is the container of the banner that */
-    width: 100%;
-    height: 100px;
-    background-color: transparent;
+/* Nav bar changed 1/12/2019 */
+body{
+	padding: 0;
+	margin: 0;
+  position: absolute;
+	height: 100vh;
+}
+header *{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.sculptgym-logo {
-    display: inline-block;
-    vertical-align: top;
-    width: 160px;
-    height: 97px;
-    margin-right: 20px;
-    margin-top: 2px;
+header{
+	height: 145px;
+	width: 100%;
+	position: relative;
+	background-color: white;
+	box-shadow: 0px 2px 5px rgba(0,0,0,.4);
+}
+.sculptgym-logo{
+	width: 200px;
+	display: block;
+	margin: 0 auto;
+	padding-top: 15px;
 }
 
-/*THe Toogle nav menu*/
-button.navbar-toggle {
-    background-color: black;
+@media screen and (max-width:820px){
+	.timlogo{margin-left: 50px;}
 }
-span.icon-bar {
-    background-color: gold;
+@media screen and (max-width:580px){
+	.timlogo{width: 130px; padding-top: 30px;}
+	nav ul li a{
+		font-size: 16px;
+	}
+	nav ul li ul{
+		top: -9px;
+	}
+	nav ul li ul li{
+		height: 40px;
+	}
+	nav ul li ul li a{
+		font-size: 16px;
+		height: 40px;
+	}
 }
-
-.navbar-container ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 25px;
+@media screen and (max-width:500px){
+	.timlogo{display: none;}
+}
+@media screen and (max-width:320px){
+	header .head .tile.socialmedia{
+		display: none;
+	}
+}
+.navbar{
+    position: relative;
+    height: auto;
     overflow: hidden;
 }
-
-.navbar-container li {
-    color: white;
-}
-
-
-.dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover,
-.dropdown:hover .dropbtn {
-    background-color: #C4B718;
-}
-
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: relative;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 100 !important;
-    position: right;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+.navbar .nav-toggle{
     display: block;
-    text-align: left;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    position: absolute;
+    top: 35%;
+    z-index: 2;
+    margin-left: 39px;
 }
-
-.dropdown-content li a:hover {
-    background-color: #f1f1f1
-}
-
-.dropdown:hover .dropdown-content {
+.navbar .nav-toggle span{
     display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 1px;
+    background: #000;
+    position: absolute;
+    left: 0;
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
 }
-
-ul.nav.navbar-nav {
-    background-color: #C4B718;
-    margin-top: 10px;
+.navbar .nav-toggle span:nth-child(1){
+    top: 4px;
+    -webkit-transform-origin: left center;
+    transform-origin: left center;
 }
-/*End of the Nav Banner Container*/
+.navbar .nav-toggle span:nth-child(2){
+    top: 14px;
+    -webkit-transform-origin: left center;
+    transform-origin: left center;
+}
+.navbar .nav-toggle span:nth-child(3){
+    top: 24px;
+    -webkit-transform-origin: left center;
+    transform-origin: left center;
+}
+.navbar .nav-toggle.open span:nth-child(1){
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 3px;
+    left: 4px;
+}
+.navbar .nav-toggle.open span:nth-child(2){
+    width: 0;
+    opacity: 0;
+}
+.navbar .nav-toggle.open span:nth-child(3){
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 25px;
+    left: 4px;
+}
+.navbar .nav-layer{
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 50%;
+    -webkit-transition: 1s;
+    transition: 1s;
+    -webkit-transform: scale3d(0, 0, 0);
+    transform: scale3d(0, 0, 0);
+}
+.navbar .nav-layer.open{
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+}
+.navbar .menu{
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    -webkit-transition: ease-in-out 0.25s;
+    transition: ease-in-out 0.25s;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+    visibility: hidden;
+    opacity: 0;
+}
+.navbar .menu ul{
+    list-style: none;
+}
+.navbar .menu a{
+    color: white;
+    text-decoration: none;
+    font-size: 47px;
+    color: darkgoldenrod;
+}
+.navbar .menu.open{
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: ease-in-out 0.5s;
+    transition: ease-in-out 0.5s;
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+    z-index: 2;
+}
+/* .navbar .nav-layer{
+    background: -webkit-linear-gradient(to left, #3494e6, #ec6ead);
+    background: linear-gradient(to left, #3494e6, #ec6ead);
+} */
+.navbar .nav-toggle span{
+    background-color: #A9A9A9;
+}
+.navbar .menu{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 10vh;
+}
+.navbar .menu li:hover{
+    list-style: disc;
+}
 
 /*The left-side part that contains all the info of the gym*/
 
@@ -110,9 +208,13 @@ div#trainer-one {
     padding-left: 10px;
 }
 #myCarousel {
-    width: 60%;
-    float: right;
-    margin-right:66px;
+  height:50%;
+  margin: -25px;
+}
+.right.carousel-control,
+.left.carousel-control
+{
+     visibility:hidden;
 }
 
 #aboutus-part,#hoursofoperation {
@@ -161,7 +263,9 @@ img.img-responsive {
       text-align: center;
       background-color: white;
       width: 100%;
-      height: 100%;
+      height:5%;
+      margin-top: 10px;
+
   }
 
   footer {
@@ -248,3 +352,43 @@ div#After-image-area {
 #Signup {
     margin-top: 10px;
     float: left;
+  }
+  .operating-hour{
+background: #ffac0c;
+margin-top: 60px;
+}
+.business-hours {
+background: #222;
+padding: 40px 14px;
+margin-top: -15px;
+position: relative;
+}
+.business-hours:before{
+content: '';
+width: 23px;
+height: 23px;
+background: #111;
+position: absolute;
+top: 5px;
+left: -12px;
+transform: rotate(-45deg);
+z-index: -1;
+}
+.business-hours .title {
+font-size: 20px;
+color: #BBB;
+text-transform: uppercase;
+padding-left: 5px;
+border-left: 4px solid #ffac0c;
+}
+.business-hours li {
+color: #888;
+line-height: 30px;
+border-bottom: 1px solid #333;
+}
+.business-hours li:last-child {
+border-bottom: none;
+}
+.business-hours .opening-hours li.today {
+color: #ffac0c;
+}
