--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,7 @@ a:hover, a:active {
     text-align: center;
     width: 70px;
 }
+}
 
 span.glyphicon.glyphicon-cog.icon {
     position: relative;
